--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\hp\\AppData\\Roaming\\NetBeans\\16\\build.properties
+user.properties.file=C:\\Users\\Lenovo T460s\\AppData\\Roaming\\NetBeans\\21\\build.properties
