--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/StudentManage
 excludes=
 file.reference.com.mysql.jdbc_5.1.5.jar=C:\\Users\\hp\\Downloads\\com.mysql.jdbc_5.1.5.jar
+file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\Lenovo T460s\\Downloads\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.com.mysql.jdbc_5.1.5.jar}
+    ${file.reference.com.mysql.jdbc_5.1.5.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=StudentManage
-main.class=studentmanage.StudentManage
+main.class=studentmanage.loginForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
