--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/StudentManage
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\Lenovo T460s\\Downloads\\mysql-connector-j-8.4.0.jar
-file.reference.mysql-connector-j-8.4.0.jar-1=C:\\Users\\hp\\Downloads\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\DELL\\Downloads\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.4.0.jar}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar-1}
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -50,8 +48,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=19
-javac.target=19
+javac.source=21
+javac.target=21
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -81,7 +79,7 @@ main.class=studentmanage.loginForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_21
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
